// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackCover stories snapshots [snapshot] should render the "Default" component story correctly 1`] = `
<img
  alt="The track cover of G.O.A.T. • Polyphia"
  class="rounded w-16 h-16"
  src="https://picsum.photos/50"
/>
`;

exports[`TrackCover stories snapshots [snapshot] should render the "SmallSize" component story correctly 1`] = `
<img
  alt="The track cover of G.O.A.T. • Polyphia"
  class="rounded w-9 h-9"
  src="https://picsum.photos/50"
/>
`;
